Closed Bug 1066147 Opened 10 years ago Closed 10 years ago

Direct2D 1.1 doesn't clear the DrawTarget upon creation

Categories

(Core :: Graphics, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: bas.schouten, Assigned: bas.schouten)

Details

Attachments

(1 file)

It should. This causes trouble on some drivers.
Attachment #8488003 - Flags: review?(jmuizelaar)
Attachment #8488003 - Flags: review?(jmuizelaar) → review+
https://hg.mozilla.org/mozilla-central/rev/47a39c2ed71a
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: