Bug 1066147: Clear new DrawTargets upon creation in D2D 1.1 backend. r=jrmuizel